; ModuleID = '/home/carl/AnghaBench/linux/net/802/extr_mrp.c_mrp_pdu_append_end_mark.c'
source_filename = "/home/carl/AnghaBench/linux/net/802/extr_mrp.c_mrp_pdu_append_end_mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrp_applicant = type { i32 }

@MRP_END_MARK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mrp_applicant*)* @mrp_pdu_append_end_mark to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrp_pdu_append_end_mark(%struct.mrp_applicant* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mrp_applicant*, align 8
  %4 = alloca i32*, align 8
  store %struct.mrp_applicant* %0, %struct.mrp_applicant** %3, align 8
  %5 = load %struct.mrp_applicant*, %struct.mrp_applicant** %3, align 8
  %6 = getelementptr inbounds %struct.mrp_applicant, %struct.mrp_applicant* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @skb_tailroom(i32 %7)
  %9 = sext i32 %8 to i64
  %10 = icmp ult i64 %9, 4
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %20

12:                                               ; preds = %1
  %13 = load %struct.mrp_applicant*, %struct.mrp_applicant** %3, align 8
  %14 = getelementptr inbounds %struct.mrp_applicant, %struct.mrp_applicant* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32* @__skb_put(i32 %15, i32 4)
  store i32* %16, i32** %4, align 8
  %17 = load i32, i32* @MRP_END_MARK, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @put_unaligned(i32 %17, i32* %18)
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %12, %11
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @skb_tailroom(i32) #1

declare dso_local i32* @__skb_put(i32, i32) #1

declare dso_local i32 @put_unaligned(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
